# KiCAD2FLX

./: CMakeLists.txt  CMakePresets.json  CurrentSensor-top.pos  KiCAD2FLX.code-workspace  KiCADPackage2FLX.txt  README.md
.devcontainer/: devcontainer.json
AI/: CodingStyles.md  prompt.md
Docker/: DockerFile  compose.yml
src/: PackageMapFile.cpp  PackageMapFile.h  PosFile.cpp  PosFile.h  PosLine.cpp  PosLine.h  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
